--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,6 @@
 remote_user = opc
 host_key_checking = False
 private_key_file = ~/.ssh/id_rsa_bastion
+
+[inventory]
+enable_plugins = oracle.oci.oci
