--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,6 +2,7 @@
 remote_user = opc
 host_key_checking = False
 private_key_file = ~/.ssh/id_rsa_bastion
+vault_password_file = vault_key.py
 
 [inventory]
 enable_plugins = oracle.oci.oci
