--- a/ansible/inventory.oci.yml
+++ b/ansible/inventory.oci.yml
@@ -5,7 +5,7 @@ enable_parallel_processing: yes
 cache: yes
 cache_plugin: jsonfile
 cache_timeout: 600
-cache_connection: /var/tmp/oci_inventory
+cache_connection: /var/tmp/oci
 cache_prefix: mc
 
 regions:
